--- a/w8/project2/style/project2.scss
+++ b/w8/project2/style/project2.scss
@@ -136,6 +136,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      margin: 8px;
     }
   }
 }
@@ -192,12 +193,12 @@
     margin-bottom: 16px;
   }
   p {
-    max-width: 40ch;
+    max-width: 470px;
     margin-block: 24px 32px;
     font-family: "Nanum Pen Script", cursive;
-    font-size: x-large;
+    font-size: xx-large;
   }
-  @media (width < 53.125rem) {
+  @media (width < 65.625rem) {
     .wrapper {
       display: block;
       text-align: center;
