--- a/w16/project/final/style/theme.light.css
+++ b/w16/project/final/style/theme.light.css
@@ -1,9 +1,9 @@
 :root {
-  --bg: #fffbff;
-  --bgVariant: #e3e1ec;
-  --txt: #1b1b1f;
-  --surface-transparent: rgb(228, 225, 230, 50%);
-  --surface: #dcd9de;
-  --onSurface: #1b1b1f;
-  --accent: #4756b2;
+  --bg: #ffffff;
+  --bgVariant: #ffffff;
+  --txt: #000000;
+  --surface-transparent: rgba(120, 51, 128, 0.7);
+  --surface: #000000;
+  --onSurface: #ffffff;
+  --accent: #cd19b8;
 }
